compiler/tools/fpp-check/test/redef_type_module.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_type_module.fpp: 2.1
module T { }
^
error: redefinition of symbol T
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_type_module.fpp: 1.1
type T
^
